Fix HTML entity encoding in projects.html

--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
                 <div class="project-content">
                     <h3>Rock Paper Scissors Game</h3>
                     <p>A fun JavaScript-based game where users play rock-paper-scissors against the computer.</p>
-                    <a href="https://github.com/yourname/rps-game" target="_blank" class="project-btn">View Code</a>
+                    <a href="https://github.com/charles19a/rock.github.io">View Code</a>
                 </div>
             </div>
 
@@ -96,5 +96,6 @@
         window.addEventListener('load', revealOnScroll);
     </script>
 </body>
+
 
 </html>
