--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
                 <div class="project-content">
                     <h3>Rock Paper Scissors Game</h3>
                     <p>A fun JavaScript-based game where users play rock-paper-scissors against the computer.</p>
-                    <a href="https://github.com/charles19a/rock.github.io">View Code</a>
+                    <a href="https://charles19a.github.io/rock.github.io/">View Code</a>
                 </div>
             </div>
 
@@ -99,3 +99,4 @@
 
 
 </html>
+
